docs(track-coordination): READY (B→A) — Task #1 custom Kafka Connect connectors
Plugin tip 2f29a328 on feat/toolkit-db-cdc-hardening exposes kafka_connect.plugins[]
(URL + sha256, init-container fetched), kafka_connect.jvm_opts[] (KAFKA_OPTS), and
top-level connectors[] for additional Connect REST registrations. Schema_version
stays at 13 (additive). Includes deploy/destroy wiring for the plugin PVC and per-
connector Jobs/ConfigMaps, plus a docs/cdc-connectors.md reference page.

Open coordination question carried over: where will the demo publish the two fat
JARs (cdc-sink, gg-cache-publisher) as fetchable URLs? GitHub Releases of
mainframe-payments-demo is the natural choice; alternative is to bake them into a
custom Connect image (Path A in the doc) instead of using plugins[] (Path B).

Verification steps for Track A spelled out in the entry; post INTEGRATED once the
end-to-end deploy reproduces a GG-side transaction landing on the gg-cache-publisher
topic and being consumed back via cdc-sink.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>